Solve collapsed class bug

--- a/src/scss/layout/_main-profile.scss
+++ b/src/scss/layout/_main-profile.scss
@@ -24,6 +24,8 @@
   }
 }
 
-.collapsed {
-  display: none;
+
+.rotate {
+  transform: rotate(180deg);
+  transition-duration: 350ms;
 }
